# arc-prize-agents

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  pyproject.toml
agents/: claude_smoke_agent.py
arc2/: __init__.py  encoder.py  ollama_client.py  run_smoke.py  solver.py
core/: claude_brain.py  frame_encoder.py  mlflow_logger.py
docs/: environment.md  state.md
scripts/: render_frame.py  run_claude_smoke.py  run_random_ls20.sh
tests/: test_arc2_encoder.py  test_frame_encoder.py
