[project]
name = "arc-agi-3-agent"
version = "0.0.1"
description = "Claude-powered agent for the ARC-AGI-3 benchmark."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    # Environment SDK (same versions the official framework pins, kept in sync
    # so we can talk to the same Arcade / FrameData / GameAction objects).
    "arc-agi>=0.9.1",
    "pydantic>=2.11",
    "numpy>=2.3",
    "pillow>=11.2",
    "python-dotenv>=1.0",
    # Experiment tracking
    "mlflow>=2.16",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[tool.uv]
package = false

[tool.ruff.lint]
extend-select = ["I"]
